# ParallelProgrammingCourse

./: .gitignore  .gitlab-ci.yml  .gitmodules  Benchmark_Report_Kmeans.ipynb  DenseMV_MPI_Benchmark_Report.ipynb  MPI_Benchmark_Report_Kmeans.ipynb  README.md  rapport.tex
Projects/LiveOfBoids/: CMakeLists.txt  CMakeSettings.json  README.md  benchmark_boids.py  boids_benchmark.csv  comp.sh  conanfile.txt  export_data.py  leScriptLoB  leScriptLoB.ipynb  run
Projects/LiveOfBoids/conan_config/: FindEigen3.cmake  FindGTest.cmake  FindJPEG.cmake  FindJasper.cmake  FindLibLZMA.cmake  FindOpenCV.cmake  FindOpenEXR.cmake  FindPNG.cmake  FindProtobuf.cmake  FindTIFF.cmake  FindWebP.cmake  FindZLIB.cmake  Findade.cmake  Findglad.cmake  Findglfw3.cmake  Findjbig.cmake  Findlibdeflate.cmake  Findopengl_system.cmake  Findquirc.cmake  Findzstd.cmake  conan_paths.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
Projects/LiveOfBoids/doc/: docker_commands.sh  math.md
Projects/LiveOfBoids/forLoB/: logLoB  logLoB.csv
Projects/LiveOfBoids/include/: Grid.hpp  config.hpp
Projects/LiveOfBoids/src/: CMakeLists.txt  Grid.cpp  config.cpp  main.cpp  main_profiling.cpp  math_main.cpp
Projects/LiveOfBoids/tests/: CMakeLists.txt  first_gtest.cpp  test_bird.cpp  test_flock_bird.cpp  test_graphics.cpp  test_law.cpp  test_math.cpp
TPs/ParallelProgrammingTP/: #1971139.out#  #1971199.out#  #CMakeLists.txt#  #Result_DenseMV_MPI.out#  #Result_LifeOfBoids_TBB.out#  #Result_LiveOfBoids_OpenMP.out#  #Result_Spmv_MPI.out#  #cemef.env#  .cemef.env.swp  .cproject  .gitignore  .project  1  12_nbproc_report_DENSEMV_MPI_.csv  12_nbproc_report_MPI_.csv  16_nbproc_report_DENSEMV_MPI_.csv  16_nbproc_report_MPI_.csv  1769331.out  1769335.out  1769345.out  1971640.out  1971641.out  1971644.out  1971646.out  1971669.out  1_nbproc_report_DENSEMV_MPI_.csv  1_nbproc_report_MPI_.csv  2079896.out  2079897.out  2079916.out  2079917.out  24_nbproc_report_DENSEMV_MPI_.csv  24_nbproc_report_MPI_.csv  2_nbproc_report_DENSEMV_MPI_.csv  2_nbproc_report_MPI_.csv  4_nbproc_report_DENSEMV_MPI_.csv  4_nbproc_report_MPI_.csv  8_nbproc_report_DENSEMV_MPI_.csv  8_nbproc_report_MPI_.csv  Becnhmark_report_MPI_4K_Image.csv  (+96 more)
TPs/ParallelProgrammingTP/.devcontainer/: devcontainer.json
TPs/ParallelProgrammingTP/CMake/: CMake.cmake  CMakeCXXCompiler.cmake  FindArpack.cmake  FindBoost.cmake  FindCUDA.cmake  FindEigen2.cmake  FindEigen3.cmake  FindFortran.cmake  FindGoogleTools.cmake  FindHWLOC.cmake  FindLapack.cmake  FindLibUnwind.cmake  FindMPI.cmake  FindMTL.cmake  FindNUMA.cmake  FindOpenMPI.cmake  FindPAPI.cmake  FindTBB.cmake  FindValgrind.cmake  FindXML2.cmake
TPs/ParallelProgrammingTP/Dense_Mv_Benchmark_CSV/: Dense_MV_MPI_CalculationTimes_Benchmark.csv  Dense_MV_MPI_DistributionTimes_Benchmark.csv  Dense_MV_MPI_OverallTime_Benchmark.csv
TPs/ParallelProgrammingTP/Kmeans_Benchmark_CSV/: Becnhmark_report_MPI_4K_Image.csv  Benchmark_Grayscale_MPI_4K_Image.csv  Benchmark_Report_MPI_Filter.csv  MPI_Benchmark_LowRes_Gray_Image.csv  MPI_Benchmark_LowRes_RGB.csv  MPI_Report_4K_Image_60.csv  OPEN_MP_Benchmark_Report.csv  TBBvsOPENMPvsSEQ_4K_Gray_Benchmark_Report.csv  TBBvsOPENMPvsSEQ_LowResGray_Benchmark_Report.csv  TBBvsOPENvsSEQ_Benchmark_Report_4K_Image.csv  TBBvsOPENvsSEQ_Benchmark_Report_Filter_Image.csv
TPs/ParallelProgrammingTP/MPI_kmeans_log_files/: log-mpi-Kvalue2-NPI1  log-mpi-Kvalue2-NPI12  log-mpi-Kvalue2-NPI16  log-mpi-Kvalue2-NPI2  log-mpi-Kvalue2-NPI24  log-mpi-Kvalue2-NPI4  log-mpi-Kvalue2-NPI8  log-mpi-Kvalue3-NPI1  log-mpi-Kvalue3-NPI12  log-mpi-Kvalue3-NPI16  log-mpi-Kvalue3-NPI2  log-mpi-Kvalue3-NPI24  log-mpi-Kvalue3-NPI4  log-mpi-Kvalue3-NPI8  log-mpi-Kvalue4-NPI1  log-mpi-Kvalue4-NPI12  log-mpi-Kvalue4-NPI16  log-mpi-Kvalue4-NPI2  log-mpi-Kvalue4-NPI24  log-mpi-Kvalue4-NPI4  log-mpi-Kvalue4-NPI8  log-mpi-Kvalue5-NPI1  log-mpi-Kvalue5-NPI12  log-mpi-Kvalue5-NPI16  log-mpi-Kvalue5-NPI2  log-mpi-Kvalue5-NPI24  log-mpi-Kvalue5-NPI4  log-mpi-Kvalue5-NPI8
TPs/ParallelProgrammingTP/OPENMP_kmeans_log_files/: log-openmp-Kvalue2-NBT1  log-openmp-Kvalue2-NBT12  log-openmp-Kvalue2-NBT16  log-openmp-Kvalue2-NBT2  log-openmp-Kvalue2-NBT24  log-openmp-Kvalue2-NBT4  log-openmp-Kvalue2-NBT8  log-openmp-Kvalue3-NBT1  log-openmp-Kvalue3-NBT12  log-openmp-Kvalue3-NBT16  log-openmp-Kvalue3-NBT2  log-openmp-Kvalue3-NBT24  log-openmp-Kvalue3-NBT4  log-openmp-Kvalue3-NBT8  log-openmp-Kvalue4-NBT1  log-openmp-Kvalue4-NBT12  log-openmp-Kvalue4-NBT16  log-openmp-Kvalue4-NBT2  log-openmp-Kvalue4-NBT24  log-openmp-Kvalue4-NBT4  log-openmp-Kvalue4-NBT8  log-openmp-Kvalue5-NBT1  log-openmp-Kvalue5-NBT12  log-openmp-Kvalue5-NBT16  log-openmp-Kvalue5-NBT2  log-openmp-Kvalue5-NBT24  log-openmp-Kvalue5-NBT4  log-openmp-Kvalue5-NBT8
TPs/ParallelProgrammingTP/SEQ_kmeans_log_files/: log-seq-Kvalue2  log-seq-Kvalue3  log-seq-Kvalue4  log-seq-Kvalue5
TPs/ParallelProgrammingTP/TBB_kmeans_log_files/: log-tbb-Kvalue2-NBT1  log-tbb-Kvalue2-NBT12  log-tbb-Kvalue2-NBT16  log-tbb-Kvalue2-NBT2  log-tbb-Kvalue2-NBT24  log-tbb-Kvalue2-NBT4  log-tbb-Kvalue2-NBT8  log-tbb-Kvalue3-NBT1  log-tbb-Kvalue3-NBT12  log-tbb-Kvalue3-NBT16  log-tbb-Kvalue3-NBT2  log-tbb-Kvalue3-NBT24  log-tbb-Kvalue3-NBT4  log-tbb-Kvalue3-NBT8  log-tbb-Kvalue4-NBT1  log-tbb-Kvalue4-NBT12  log-tbb-Kvalue4-NBT16  log-tbb-Kvalue4-NBT2  log-tbb-Kvalue4-NBT24  log-tbb-Kvalue4-NBT4  log-tbb-Kvalue4-NBT8  log-tbb-Kvalue5-NBT1  log-tbb-Kvalue5-NBT12  log-tbb-Kvalue5-NBT16  log-tbb-Kvalue5-NBT2  log-tbb-Kvalue5-NBT24  log-tbb-Kvalue5-NBT4  log-tbb-Kvalue5-NBT8
TPs/ParallelProgrammingTP/benchmarks/: densemv-bencmarks  omp-tbb-benchmarks  spmv-benchmarks
TPs/ParallelProgrammingTP/contrib/: eigen34.tgz
TPs/ParallelProgrammingTP/densemv-logs/: log-NX150-NPI1  log-NX150-NPI12  log-NX150-NPI16  log-NX150-NPI2  log-NX150-NPI8  log-NX200-NPI1  log-NX200-NPI16  log-NX200-NPI2  log-NX200-NPI24  log-NX200-NPI4  log-NX200-NPI8  log-NX50-NPI1  log-NX50-NPI16  log-NX50-NPI2
TPs/ParallelProgrammingTP/densemv_log_files/: log-NX100-NPI1  log-NX100-NPI12  log-NX100-NPI16  log-NX100-NPI2  log-NX50-NPI1  (+23 more)
(+614 files in other folders)
